# LMDK

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo_train.py  development_plan.txt  prepared_data.txt  pyproject.toml  sample_data.txt  test.py  test_generation.py  test_lmdk.py  toxic.txt
.github/workflows/: build_wheels.yml
lmdk/: __init__.py  cli.py  dpe.py  eval.py  rust_core.cp313-win_amd64.pyd  train.py
src/: lib.rs  main.py
src/lmdk/: cli.py
