[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lmdk"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = [
    "typer[all]>=0.9,<1.0",
    "rich>=13.0,<14.0",
]

[project.scripts]
lmdk = "lmdk.cli:app"
