[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lmdk"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer[all]>=0.9,<1.0",
    "rich>=13.0,<14.0",
    "torch>=2.0,<3.0",
    "transformers>=4.0,<5.0",
    "datasets>=2.0,<3.0",
    "mlflow>=2.0,<3.0",
    "accelerate>=0.20,<1.0",
    "lm-eval>=0.4,<1.0",
]

[project.scripts]
lmdk = "lmdk.cli:app"
