[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lmdk"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer[all]>=0.9,<1.0",
    "rich>=13.0,<14.0",
    "torch>=2.0,<3.0",
    "transformers>=4.0,<5.0",
    "datasets>=2.0,<3.0",
    "mlflow>=2.0,<3.0",
    "accelerate>=0.20,<1.0",
    "lm-eval>=0.4,<1.0",
]

[project.scripts]
lmdk = "lmdk.cli:app"
